# capture-sdk

./: .bazelproject  .bazelrc  .bazelrc.local.example  .clippy.toml  .drstring.toml  .gitattributes  .gitignore  .swiftlint.yml  AGENTS.md  BUILD  CHANGELOG.md  Cargo.toml  MODULE.bazel  Makefile  NOTICE  README.md  WORKSPACE  WORKSPACE.bzlmod  bazelw  deny.toml  rustfmt.toml  taplo.toml  test_dokka.gradle.kts
api/python/bdapi/: Makefile  README.md  pyproject.toml
api/python/bdapi/tests/: test_ingest.py
platform/crash/: AGENTS.md  BUILD  Cargo.toml
platform/crash/src/: coordinator.rs  coordinator_test.rs  ffi.rs  ffi_test.rs  lib.rs  previous.rs  previous_test.rs  schema.rs  state.rs  store.rs  store_test.rs  test_support.rs  writer.rs  writer_test.rs
platform/crash/src/monitors/: ios.rs  mod.rs  nsexception.rs  nsexception_test.rs
platform/jvm/: .gitattributes  .gitignore  AndroidManifest.xml  BUILD.bazel  Cargo.toml  README.md  allowed-licenses.json  bloaty-no-btree.csv  build.rs  gradle.properties  jni_symbols.lds  settings.gradle.kts
platform/jvm/ai-workflow-instrumentation/: Cargo.toml
platform/jvm/ai-workflow-instrumentation/src/: lib.rs
platform/jvm/buildSrc/: build.gradle.kts
platform/jvm/capture/: BUILD.bazel  build.gradle.kts  consumer-rules.pro  detekt.yml
platform/jvm/capture-apollo/: build.gradle.kts  detekt.yml
platform/jvm/capture-apollo3/: build.gradle.kts
platform/jvm/capture-deobfuscation-plugin/: build.gradle.kts
platform/jvm/capture-plugin/: build.gradle.kts
platform/jvm/capture-timber/: build.gradle.kts  consumer-rules.pro
platform/jvm/common/: AndroidManifest.xml  BUILD.bazel  build.gradle.kts
platform/jvm/core/: BUILD.bazel  Cargo.toml
platform/jvm/core/src/: events.rs  executor.rs  ffi.rs  jni.rs  key_value_storage.rs  report_processing.rs  resource_utilization.rs  session.rs  session_replay.rs
platform/jvm/detekt-custom-rules/: build.gradle.kts
platform/jvm/flappy-chippy/: build.gradle.kts  proguard-rules.pro  test-proguard-rules.pro
platform/jvm/flappy-clippy/: build.gradle.kts
platform/jvm/gradle/: libs.versions.toml
platform/jvm/gradle-test-app/: build.gradle.kts
platform/jvm/gradle-tv-test-app/: build.gradle.kts
platform/jvm/microbenchmark/: build.gradle.kts
platform/jvm/replay/: AndroidManifest.xml  BUILD.bazel  build.gradle.kts
platform/jvm/src/: events.rs  executor.rs  ffi.rs  jni.rs  key_value_storage.rs  lib.rs  report_processing.rs  resource_utilization.rs  session.rs  session_replay.rs
platform/server/cpp/: BUILD  Cargo.toml
platform/server/cpp/src/: lib.rs  logger.rs
platform/shared/: .sdk_version  BUILD  Cargo.toml  build.rs
platform/shared/src/: error.rs  feature_flags.rs  ffi_wrapper.rs  javascript_error.rs  lib.rs  metadata.rs  metadata_test.rs  url_normalizer.rs  url_normalizer_sanitization_test.rs
platform/shared/version_codegen/: main.rs
platform/swift/source/: BUILD  CONVERSION_TESTING.md  Capture.swift  CaptureRustBridge.h  Cargo.toml  CoreLogger.swift  CoreLogging.swift  CrashReporter.swift  DebugHeuristics.swift  FatalIssueReporter.swift  Field+Extensions.swift  InternalAPI.h  InternalAPI.m  LogLevel.swift  Logger.swift  LoggerBridge.swift  LoggerBridging.swift  LoggerBridgingFactory.swift  LoggerBridgingFactoryProvider.swift  LoggerIntegrator.swift  LoggerLifecycleController.swift  LoggerObjc.swift  LoggerProvider.swift  Logging.swift  ObjCWrapper.h  ObjCWrapper.mm  PreviousRunSentinel.swift  ReportProcessingSession.swift  RuntimeVariable.swift  SdkStatus.swift  SessionReplayIntegrationBridge.swift  SessionStrategy.swift  allocator_shim.rs  capture_exported_symbols.txt  clippy.toml
platform/swift/source/bridging/: EventSubscriber.swift  EventsListenerTarget.swift  LogMetadataProvider.swift  RemoteErrorReporting.swift  ResourceUtilizationTarget.swift  SessionReplayTarget.swift  SessionStrategyProvider.swift
platform/swift/source/compile_commands/: BUILD
platform/swift/source/crash_handler/: BitdriftKSCrashHandler.h  BitdriftKSCrashHandler.m  ReportContext.h  ReportWriter.c  ReportWriter.h
platform/swift/source/crash_handling/: CrashHandling.h  CrashHandling.m
platform/swift/source/device_code/: DeviceCodeController.swift
platform/swift/source/error/: RemoteErrorReportingClient.swift
platform/swift/source/features/: Configuration.swift  SessionReplayConfiguration.swift  SleepMode.swift  WebViewConfiguration.swift
platform/swift/source/kscrash/: BONJSONReportWriter.c  BONJSONReportWriter.h  BitdriftKSCrashHandler.h  BitdriftKSCrashHandler.m  ReportContext.h  ReportReader.h  ReportReader.m  ReportWriter.c  ReportWriter.h  ReportWriterPrivate.h
platform/swift/source/logging/: HTTPHeaders.swift  HTTPRequestInfo.swift  HTTPRequestMetrics.swift  HTTPResponse.swift  HTTPResponseInfo.swift  HTTPURLPath.swift  Span.swift
platform/swift/source/opaque_user_id/: OpaqueUserIDController.swift
platform/swift/source/providers/: DateProvider.swift  FieldProvider.swift  MetadataProvider.swift  MetadataProviderController.swift  SystemDateProviders.swift
platform/swift/source/replay/: AnnotatedView.swift  Replay+SpriteKit.swift  Replay.swift  ReplayCommonCategorizer.swift  ReplayController.swift  ReplayIdentifiable.swift  ReplayParsing.swift  SessionReplayController.swift  SessionReplayTarget.swift
platform/swift/source/reports/: BitdriftCrashHandler.h  BitdriftCrashHandler.m  BitdriftKSCrashWrapper.h  BitdriftKSCrashWrapper.m  ConfigCache.swift  CrashReporterService.swift  CrashReportingIntegration.swift  CustomConfigIssueReporter.swift  DiagnosticEventReporter.h  DiagnosticEventReporter.m  IssueCallbackConfiguration.swift  IssueReportCallback.swift  IssueReporterInitState.swift  PreviousRunInfo.swift  PreviousRunInfoRepository.h  PreviousRunInfoRepository.m  PreviousRunResolver.swift  PreviousRunStateCaptureSupport.h  (+3 more)
platform/test_helpers/: BUILD  Cargo.toml
platform/test_helpers/src/: lib.rs
proto/: BUILD  Cargo.toml
proto/src/: main.rs
test/benchmark/: BUILD  Cargo.toml
test/platform/jvm/: BUILD  Cargo.toml  DeallocationGuardTest.kt
(+1274 files in other folders)
