[workspace]
members = [
  "platform/jvm",
  "platform/jvm/core",
  "platform/shared",
  "platform/swift/source",
  "platform/test_helpers",
  "proto",
  "test/benchmark",
  "test/platform/jvm",
  "test/platform/swift/bridging",
  "test/platform/pom_checker",
]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.12"
android_logger = { version = "0.15.1", default-features = false }
anyhow = "1.0.102"
assert_matches = "1.5.0"
async-trait = "0.1.89"
bd-api = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-bonjson = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-bonjson-ffi = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-buffer = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-client-common = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-client-stats-store = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-crash-handler = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-device = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-error-reporter = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-grpc = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-hyper-network = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745", default-features = false, features = [
  "ring",
] }
bd-key-value = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-log = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-log-metadata = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-log-primitives = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-logger = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-noop-network = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-proto = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-report-parsers = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-report-writer = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-runtime = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-session = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-shutdown = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
bd-test-helpers = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745", default-features = false, features = [
  "ring",
] }
bd-time = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d50f280525f3335015631a19e8bcb17d35e1d745" }
clap = { version = "4.6.1", features = ["derive", "env"] }
ctor = "0.10.0"
env_logger = { version = "0.11.10", default-features = false }
flatbuffers = "=25.9.23" # https://github.com/google/flatbuffers/issues/8876
futures-util = "0.3.32"
jni = "0.21.1"
log = { version = "0.4.29", features = ["max_level_trace", "release_max_level_info"] }
memmap2 = "0.9.10"
objc = "0.2.7"
objc-foundation = "0.1.1"
parameterized = "2.1.0"
parking_lot = "0.12.5"
platform-shared = { path = "platform/shared" }
pretty_assertions = "1.4.1"
protobuf = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack", features = [
  "bytes",
  "with-bytes",
] }
protobuf-codegen = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack" }
protobuf-json-mapping = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack" }
rand = "0.10.1"
rand_distr = "0.6.0"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
time = { version = "0.3.47", features = ["serde-well-known", "macros"] }
tokio = { version = "1.52.0", features = ["full", "test-util"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = "s"
panic         = "abort"
