[workspace]
members = [
  "platform/crash",
  "platform/jvm",
  "platform/jvm/core",
  "platform/shared",
  "platform/swift/source",
  "platform/test_helpers",
  "proto",
  "test/benchmark",
  "test/platform/jvm",
  "test/platform/swift/bridging",
  "test/platform/pom_checker",
]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.12"
android_logger = { version = "0.15.1", default-features = false }
anyhow = "1.0.103"
assert_matches = "1.5.0"
async-trait = "0.1.89"
bd-api = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-bonjson = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-bonjson-ffi = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-buffer = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-client-common = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-client-stats-store = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-crash-handler = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-device = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-error-reporter = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-grpc = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-hyper-network = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9", default-features = false, features = [
  "ring",
] }
bd-key-value = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-log = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-log-metadata = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-log-primitives = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-logger = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-noop-network = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-proto = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-report-parsers = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-report-writer = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-runtime = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-session = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-shutdown = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
bd-test-helpers = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9", default-features = false, features = [
  "ring",
] }
bd-time = { git = "https://github.com/bitdriftlabs/shared-core.git", rev = "d0144d41ae2b7156450342576193cff1db0289d9" }
clap = { version = "4.6.1", features = ["derive", "env"] }
ctor = "1.0.7"
env_logger = { version = "0.11.11", default-features = false }
flatbuffers = "=25.9.23" # https://github.com/google/flatbuffers/issues/8876
futures-util = "0.3.32"
jni = "0.21.1"
log = { version = "0.4.33", features = ["max_level_trace", "release_max_level_info"] }
memmap2 = "0.9.11"
objc = "0.2.7"
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["alloc", "NSException", "NSObjCRuntime", "NSString", "NSArray", "NSValue"] }
objc-foundation = "0.1.1"
parameterized = "2.1.0"
parking_lot = "0.12.5"
platform-shared = { path = "platform/shared" }
pretty_assertions = "1.4.1"
protobuf = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack", features = [
  "bytes",
  "with-bytes",
] }
protobuf-codegen = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack" }
protobuf-json-mapping = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack" }
rand = "0.10.1"
rand_distr = "0.6.0"
regex = "1.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
time = { version = "0.3.53", features = ["serde-well-known", "macros"] }
tokio = { version = "1.52.3", features = ["full", "test-util"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4"] }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = "s"
panic         = "abort"
